# denise

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  denise.pc.in
denise/: Makefile.am  analysis.cc  analysis.h  astronomy.cc  astronomy.h  aviation.cc  aviation.h  basics.cc  basics.h  cairoable.cc  cairoable.h  cluster.cc  cluster.h  constream.cc  constream.h  dataset.cc  dataset.h  ds.cc  ds.h  dstring.cc  dstring.h  dtime.cc  dtime.h  exception.cc  exception.h  fft.cc  fft.h  fractal.cc  fractal.h  geodesy.cc  geodesy.h  geometry.cc  geometry.h  gis.cc  gis.h  graphics.cc  graphics.h  grib.cc  grib.h  gtkmm.cc  (+39 more)
src/: Makefile.am  andrea.cc  andrea.h  denise.cc  denise.h  geodesy.cc  geodesy.h  geodetic_mesh.cc  geodetic_mesh.h  geodetic_transform.cc  geodetic_transform.h  gshhs.cc  gshhs.h  journey.cc  journey.h  main.cc  package.cc  package.h  sounding.cc  sounding.h  surface.cc  surface.h  tc.cc  tc.h
